# VelocityClaw

./: .dockerignore  .env.example  .gitignore  APPROVAL_WORKFLOW_SPEC.md  ARCHITECTURE.md  AUTO_FIX_LOOP_SPEC.md  CHANGELOG.md  DASHBOARD_SPEC.md  Dockerfile  EXECUTION_PROFILES_SPEC.md  ISSUE_BACKLOG.md  LICENSE  PATCH_ENGINE_SPEC.md  PR_BOOTSTRAP_NOTE.tmp  README.md  RUNBOOK.md  SECURITY.md  SPRINT_7_DAY_PLAN.md  SYMBOL_NAV_SPEC.md  TEST_RUNNER_SPEC.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: build-artifacts.yml  ci.yml  codeql.yml  dependency-audit.yml  publish-release.yml  release-preflight.yml  release.yml
deploy/: velocity_claw.service
deploy/docker/: README.md  docker-compose.yml  velocity-claw.env.example
deploy/install/: README.md  install.sh
deploy/systemd/: README.md  (+3 more)
docs/: API.md  APPROVALS.md  DASHBOARD_V2.md  DEPLOYMENT.md  DIFF_PREVIEW.md  DRY_RUN.md  EXECUTION_PROFILES.md  FAILED_RUN_RESUME.md  PROJECT_MEMORY.md  QUEUE.md  QUEUE_RECOVERY_EXAMPLE.md  RELEASE.md  RELEASE_AUTOMATION.md  RELEASE_BOOTSTRAP.md  RELEASE_BOOTSTRAP_SECONDARY.md  TEST_RUNNER.md
scripts/: __init__.py  bump_version.py  generate_release_notes.py  install-systemd.sh  smoke_api.py  validate_package.py
tests/: __init__.py  conftest.py  test_agent.py  test_api_auth_v1.py  test_api_contract_response_schema_hardening_v2.py  test_api_docs_v2.py  test_api_error_handlers_wiring_v3.py  test_api_error_handling_hardening_v2.py  test_api_error_traceback.py  test_approval_attempts_v2.py  test_approval_continuation_v3.py  test_approval_docs.py  test_approval_latest_step_native.py  test_approval_resume_profile_guard_v2.py  test_approval_workflow_contract.py  test_approval_workflow_v2.py  test_artifact_explorer_run_forensics_v1.py  test_auto_fix_intelligence_v2.py  test_build_artifact_workflow_v2.py  test_build_package_validation_v2.py  test_centralized_logging_v2.py  test_changelog_release_notes_automation_v2.py  test_ci_package_validation_integration_v2.py  test_cli_exception_boundary_v2.py  test_code_routes_v3.py  test_dashboard_filters_contract.py  test_dashboard_filters_v2.py  test_dashboard_operations_console_v3.py  test_dashboard_operator_v2.py  test_dashboard_product_maturity_v2.py  test_dashboard_retry_controls_v2.py  test_dashboard_runs_v2.py  test_dashboard_v2_foundation.py  test_dependency_audit_workflow_v2.py  test_deploy_env_templates_v1.py  test_deployment_docker_compose_hardening_v2.py  test_deployment_docs_consolidation_v2.py  test_deployment_systemd_hardening_v2.py  test_diagnostics_v2.py  test_dry_replace_change_flag.py  (+100 more)
velocity_claw/: __init__.py  __main__.py  __version__.py  cli.py  package_validation.py  release_notes.py
(+78 files in other folders)
