[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "velocity-claw"
version = "0.2.0"
description = "Self-hosted AI dev-agent for controlled repo automation, approvals, retry/replay, and operator deployment."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
  { name = "Velocity Claw maintainers" }
]
keywords = ["ai-agent", "dev-agent", "automation", "fastapi", "self-hosted"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "Topic :: Software Development",
]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.23.0",
  "requests>=2.31.0",
  "aiohttp>=3.9.0",
  "python-dotenv>=1.0.0",
  "python-telegram-bot>=20.6",
  "PyYAML>=6.0",
  "pydantic>=2.0.0",
  "slowapi>=0.1.9",
  "limits>=3.13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
velocity-claw = "cli:main"

[tool.setuptools.packages.find]
include = ["velocity_claw*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
