[build-system]
requires = ["setuptools==70.3.0", "wheel==0.43.0"]
build-backend = "setuptools.build_meta"

[project]
name = "velocity-claw"
version = "0.2.2"
description = "Self-hosted AI dev-agent for controlled repo automation, approvals, retry/replay, and operator deployment."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Velocity Claw maintainers" }
]
keywords = ["ai-agent", "dev-agent", "automation", "fastapi", "self-hosted"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development",
]
dependencies = [
  "fastapi==0.135.3",
  "uvicorn[standard]==0.43.0",
  "requests==2.33.1",
  "aiohttp==3.13.5",
  "python-dotenv==1.2.2",
  "python-telegram-bot==22.7",
  "PyYAML==6.0.3",
  "pydantic==2.13.2",
  "slowapi==0.1.9",
  "limits==5.8.0",
  "openai==2.36.0",
  "anthropic==0.100.0",
  "google-generativeai==0.8.6",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
]

[project.scripts]
velocity-claw = "cli:main"

[tool.setuptools.packages.find]
include = ["velocity_claw*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
